# jewel-app

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
app/: CMakeLists.txt  canvas.cpp  canvas.h  main.cpp
elements/: BaseElement.cpp  BaseElement.h  Shank.cpp  Shank.h  Types.h
gui/: Gui.cpp  Gui.h  MainFrame.cpp  MainFrame.h
gui/panels/: SideBar.cpp  SideBar.h
